# beangoal

./: .gitignore  .mise.toml  CLAUDE.md  README.md  pyproject.toml
beangoal/: allocator.py  cli.py  ledger.py  loader.py  models.py  report.py
example/: goals.beancount  ledger.beancount
tests/: test_allocator.py  test_cli.py  test_ledger.py  test_loader.py
