[project]
name = "beangoal"
version = "0.1.0"
description = "Savings goals tracking for beancount v3"
requires-python = ">=3.12"
dependencies = [
    "beancount>=3.0",
    "beanquery",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
beangoal = "beangoal.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ty",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
